Add Docker Compose setup for frontend, backend, and Postgres

--- a/todolist/backend/src/main/resources/application.properties
+++ b/todolist/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=task
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
-spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/mydb}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:12345}
